--- a/frontend/templates/admin_tienda_panel.html
+++ b/frontend/templates/admin_tienda_panel.html
@@ -21,7 +21,9 @@
                 <a href="/admin/categorias_productos" class="btn btn-panel btn-lg">Categorías de productos</a>
                 <a href="/admin/productos" class="btn btn-panel btn-lg">Productos</a>
                 <a href="/admin/promociones" class="btn btn-panel btn-lg">Promociones</a>
+                <a href="/admin/promociones-productos" class="btn btn-panel btn-lg">Promociones y Productos</a>
                 <a href="/admin/cupones" class="btn btn-panel btn-lg">Cupones</a>
+                <a href="/admin/ordenes" class="btn btn-panel btn-lg">Órdenes</a>
                 
             </div>
         </div>
