--- a/frontend/templates/reservas.html
+++ b/frontend/templates/reservas.html
@@ -58,7 +58,7 @@
                     Ir a pagar:
                     <br>
                     <br>
-                    <button type="submit" class="btn btn-mercadopago btn-full">
+                    <button type="submit" class="btn-place-order btn-mercadopago btn-full">
                         
                         <img class="logo-img-mercadopago" src="/static/img/mercadopago-logo.svg" alt="Mercado Pago">
                         
