--- a/frontend/templates/pago_error.html
+++ b/frontend/templates/pago_error.html
@@ -35,7 +35,7 @@
 
         <br>
 
-        <a href="/eventos-disponibles" class="btn btn-primary">Volver a eventos</a>
+        <a href="/" class="btn btn-primary">Volver a la página principal</a>
     </div>
 </body>
 </html>
